--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,7 +8,9 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    types: [assigned, opened]
+    branches: [ "main" ]
+  repository_dispatch:
+    types: [opened, deleted]
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
