--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,8 +9,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '25 * * * *'
+  #schedule:
+  #  - cron: '25 * * * *'
   repository_dispatch:
     types: [opened, deleted]
     branches: [ "main" ]
